infra/network/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: azure-dns
spec:
  tls:
  - hosts:
    - www.moveez.de
    secretName: wildcard
  rules:
  - host: www.moveez.de
    http:
      paths:
      - path: /
        backend:
          serviceName: gui-master-prod
          servicePort: 80
